--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@
 }
 #container {
     display:grid;
-    row-gap: 2vh;
+    row-gap: 5vh;
     background-image: url(https://www.lefthudson.com/wp-content/uploads/2019/11/white-background-wallpaper-awesome-white-wallpapers-in-hd-barbaras-hd-wallpapers-ideas-of-white-background-wallpaper.jpg);
     #mobile-header {
         display: grid;
@@ -48,7 +48,7 @@
                 position: relative;
                 .hamburger-line {
                     width: 30px;
-                    height: 4px;
+                    height: 3px;
                     background-color: black;
                 }
             }
@@ -60,7 +60,7 @@
                 display: grid;
                 top:-19vh;
                 opacity: 0;
-                left: 0;
+                left: 30vw;
                 min-height: 19vh;
                 background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
                 a {
@@ -111,79 +111,110 @@
     #content {
         width: 99%;
         
-        min-height: 65vh;
+        min-height: 60vh;
       
         display: grid;
-        row-gap:1vw ;
-      
-        #content-one {
-            width: 99%;
-            height: 20vh;
-            background-color: black;
-            position: relative;
-            margin-left: 1vw;
-            
-            img {
-                width:50%;
-                height:20vh;
-            }
-           
-            #ptag-one {
-                position: absolute;
-                font-weight: bolder;
-                top:7vh;
-                left: 50vw;
-                font-style: italic;
-                color: white;
-               
-
-            }
-            #ptagone-one {
-                display: none;
-            }
-            #ptag-two {
-                position: absolute;
-                font-style: italic;
-                font-size: smaller;
-                font-weight: bolder;
-                top:21vh;
-                left: 50vw;
-                text-align: center;
-                background-color: black;
-                color: white;
-                #atagone-content {
-                    color:goldenrod;
-                   
-                }
-                
-            }
-            #contentimage-one {
-                width:100%;
-                height: 20vh;
-            }
-            #ptag-three {
-                position: absolute;
-                top:54vh;
-                color: white;
-                left: 55vw;
-                #atagtwo-content
-                {
-                    color: goldenrod;
-                    position: absolute;
-                    left: 10vw;
-                    font-style: italic;
-                    
-                }
-            }
-            
-
-        }
+        row-gap:12vw ;
         #content-two {
             display: none;
         }
-        
-       
-        
+        #content-1 {
+            min-height: 6vh;
+                h2,h4 {
+                    color: #333;
+                    font-family:"adobe-caslon-pro",serif;
+                    font-style: normal;
+                    font-size: xx-large;
+                    margin-left: 5vw;
+                    text-align: center;
+
+                }
+                h4 {
+                    font-style: italic;
+                    font-size: 1em;
+                    margin-left: 6vw;
+                  
+
+                }
+                #hrtag-one,#hrtag-two {
+                    width:70%;
+                    margin-left: 15vw;
+                    margin-top: 8vh;
+                }
+                h3 {
+                   
+                    color:#8c6349 ;
+                    font-size: small;
+                    margin-top: 2.5vh;
+                    width: 60%;
+                    text-align: center;
+                    margin-left: 20vw;
+                }
+                #hrtag-two {
+                    margin-top: 4vh;
+                }
+        }
+        #content-2 {
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            row-gap: 2vh;
+            .condent2-images {
+                width:60%;
+                border: 1px solid black;
+            }
+        }
+        #content-3 {
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            min-height: 60vh;
+            #content3-h3tagone {
+                color: #333; 
+                font-style: oblique;
+                font-weight: bolder;
+                font-size: small;
+                width: 95%;
+                text-align: center;
+                #content3-atagone{
+                    color: goldenrod;
+                }
+            }
+            #content3-img1 {
+                width: 80%;
+                border: 4px double black;
+            }
+        }
+        #content-4 {
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            min-height: 60vh;
+            #content4-h3tagone {
+                color: #333; 
+                font-style: oblique;
+                font-weight: bolder;
+                font-size: small;
+                width: 95%;
+                text-align: center;
+                #content4-atagone {
+                            color:white;
+                            background-color:darkred;
+                            padding: 3vh;
+                            text-decoration: none;
+                            transition: all 0.25s ease-in-out;
+                            &:hover {
+                                background-color: crimson;
+                            }
+                }
+               
+            }
+            #content4-img2 {
+                width: 80%;
+                border: 4px double black;
+
+            }
+        }
     }
     #footer {
         width:100%;
@@ -191,9 +222,7 @@
         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
         display: grid;
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-
-
-    }
+   }
     @media only screen and(min-width:600px)
     {
         #mobile-header {
@@ -218,57 +247,54 @@
                 text-decoration: none;
                 background-color: darkred;
                 color: white;
-                padding: 5px;
+                padding: 10px;
                 font-size: medium;
             }
         }
-            #content {
-                #content-1 {
-                    display: none;
-
-                }
-                min-height: 75vh;
-                
-                #content-one {
-                    position: relative;
-                  margin-top: 1%;
-                  #ptag-one
-                  {
-                      font-size: 1.4em;
-                  }
-                  #ptagone-one {
-                      display: none;
-                  }
-
-                    iframe {
-                        height: 25vh;
-                    }
-                    #contentimage-one {
-                        height: 28vh;
-                    }
-                    #ptag-three {
-                        position: absolute;
-                        left: 65vw;
-                        top:55vh;
-                        font-size:x-large;
-                        #atagtwo-content {
-
-                           position: absolute;
-                           left: 3vw;
-                           top: 5vh;
-                           font-size: larger;
-                            
-                        }
-                    }
-                }
-                #content-two {
-                    display: none;
-                }
-                
-                
+        #content {
+           
+            #content-two {
+                display: none;
             }
-            #footer {
-                font-size:x-large;
+            #content-1 {
+                    h2,h4 {
+                       font-size: 3em;
+                    }
+                    h4 {
+                        
+                        font-size:x-large;
+                    }
+                    h3 {
+                        font-size:xx-large;
+                    }
+                }
+            #content-2 {
+                .condent2-images {
+                   width:275px;
+                   height: 183px;
+                    border: 1px solid black;
+                }
+            }
+            #content-3 {
+                min-height: 75vh;
+                #content3-h3tagone {
+                    font-size: xx-large;
+                    width:90%;
+                    text-align: center;
+                }
+               
+            }
+            #content-4 {
+                min-height: 80vh;
+                #content4-h3tagone {
+                    font-size: xx-large;
+                    width: 95%;
+                    text-align: center;
+                }
+            }
+        }
+        #footer {
+                font-size:large;
                 align-items: center;
                 justify-items: center;
                 height: 10vh;
@@ -284,14 +310,11 @@
     
             }
         }
-    @media only screen  and(min-width:1020px){
+    @media only screen  and(min-width:1300px){
         #mobile-header {
             display: none;
         }
-        #content-1 {
-            display: none;
-
-        }
+        
         #header {
             display: grid;
             grid-template-columns: repeat(auto-fit,minmax(90px,1fr));
@@ -329,135 +352,113 @@
           
         }
         #content {
-           
-            grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+           display: grid;
             width: 99%;
-           
-            #content-one {
+            min-height: 80vh;
+            #content-1,#content-2,#content-3,#content-4 {
                 display: none;
-
-
+    
+            }
+            .condenttwoimages{
+                position: absolute;
+                border: 3px solid black;
+                width: 275px;
+                height: 183px;
             }
             #content-two {
                 min-height: 170vh;
-
                 display: block;
-                position: relative;
-                h1 {
-                    position: absolute;
-                    top:15vh;
-                    left:10vw;
+                display: grid;
+                row-gap: 20vh;
+                #content2-1 {
+                    display: grid;
+                    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+                    min-height: 70vh;
+                    position: relative;
+                    h1 {
                     color: #333;
                     font-family:"adobe-caslon-pro",serif;
                     font-style: normal;
                     font-size: 3em;
-
-                }
-                h4 {
-                    position:absolute;
-                    top:26vh ;
-                    left: 14vw;
-                    color: #333;
-                    font-family:"adobe-caslon-pro",serif;
-                    font-size: 1em;
-                    font-style: italic;
-
-
-                }
-                .condenttwoimages{
                     position: absolute;
-                    border: 3px solid black;
-                    width: 275px;
-                    height: 183px;
+                    top: 14vh;
+                    left:14vw;
+                    }
+                    h4 {
+                        color: #333;
+                        font-family:"adobe-caslon-pro",serif;
+                        font-size: 1em;
+                        font-style: italic; 
+                        position: absolute;
+                        top: 24vh;
+                        left: 18vw;
+                    }
+                    #hrtag-one,#hrtag-two {
+                        border-color: #8c6349;
+                        position: absolute;
+                        top:35vh;
+                        width: 35%;
+                        left:8vw;
+                    }
+                    #hrtag-two {
+                        top:66vh;
+                    }
 
-                }
-                #contenttwo-imageone {
-                   
-                    left: 44vw;
-                    top:8vh;
+                    #contenttwo-imageone
+                    {
+                        position: absolute;
+                        left:53%;
+                        top: 9vh;
 
-                }
-                #contenttwo-imagetwo{
-                    
-                    left: 69vw;
-                    top:8vh;
-                   
+                    }
+                    #contenttwo-imagetwo {
+                        position: absolute;
+                        left: 75%;
+                        top: 9vh;
+                          
+                    }
+                    #contenttwo-imagethree {
+                        position: absolute;
+                        left:53%;
+                        top:40vh;
 
-                }
-                #contenttwo-imagethree{
-                  
-                    left: 44vw;
-                    top:38vh;
-                    
+                    }
+                    #contenttwo-imagefour {
+                        position: absolute;
+                        left: 75%;
+                        top:40vh;
 
-                }
-                #contenttwo-imagefour{
-                    
-                    left: 69vw;
-                    top:38vh;
-                    
+                    }
+                    #contenttwo-ptagone {
+                        position: absolute;
+                        top:46vh ;
+                        left: 8vw;
+                        font-size: large;
+                        color:#8c6349 ;
+                        text-align: center;
+                        font-weight: bold;
 
-                }
-                #hrtag-one {
-                    border-color: #8c6349;
-                    position: absolute;
-                    top: 40vh;
-                    left:3vw;
-                    width:37%;
-                }
-                #hrtag-two {
-                    border-color: #8c6349;
-                    position: absolute;
-                    top: 65vh;
-                    left:3vw;
-                    width:37%;
-                }
-                #contenttwo-ptagone {
-                    position: absolute;
-                    top: 47vh;
-                    left: 3vw;
-                    font-size: large;
-                    color:#8c6349 ;
-                    text-align: center;
-                    font-weight: bold;
-                    
+                    }
                 }
                 #contenttwo-two {
-                    width: 100%;
-                    top:80vh;
-                    height: 36vh;
-                    left: 0.25vw;
-                  
-                    position: absolute;
-                    #contenttwo-imagefive {
-                        position: absolute;
-                        top: 0;
+                    position: relative;
+                    min-height: 100vh;
+                    #contenttwo-imagefive,#contenttwo-imagesix {
                         height: 35vh;
                         width: 40%;
                         border: 5px double black;
-
-                        
                     }
-                    #contenttwo-h3tagone{
+                    #contenttwo-h3tagone {
                         color: #333; 
                         position: absolute;
                         left:47%;
                         font-style: oblique;
                         font-weight: bolder;
-                        top:15vh;
+                        top:12vh;
                         #contenttwo-atagone {
                             color: goldenrod;
-                        }
-                    }
-                    #contenttwo-imagesix {
-                        position: absolute;
-                        top: 43vh;
-                        height: 35vh;
-                        width: 40%;
-                        border: 5px double black;
-                        left: 55%;
+                        }  
 
-                        
                     }
                     #contenttwo-h3tagtwo {
                         position: absolute;
@@ -466,7 +467,7 @@
                         color: #333; 
                         font-style: oblique;
                         font-weight: bolder;
-                        #contenttwo-atagone {
+                        #contenttwo-atagtwo {
                             position: absolute;
                             left: 7vw;
                             color:white;
@@ -478,15 +479,16 @@
                                 background-color: crimson;
                             }
                         }
+                     
                     }
+                    #contenttwo-imagesix  {
+                        position: absolute;
+                        top:60vh ;
+                        left: 47%;
+                    }
+
                 }
-                
-                
-
-
             }
-            
-           
         }
         #footer {
             justify-items: normal;
@@ -504,13 +506,6 @@
             }
                 
         } 
-           
-        
-        
-       
-       
-
-        
     }
    
 }
