--- a/style4.css
+++ b/style4.css
@@ -77,7 +77,7 @@
   display: grid;
   top: -19vh;
   opacity: 0;
-  left: 0;
+  left: 30vw;
   min-height: 19vh;
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
 }
@@ -227,7 +227,7 @@
     text-decoration: none;
     background-color: darkred;
     color: white;
-    padding: 5px;
+    padding: 10px;
     font-size: medium;
   }
   #container #content #content-1 #content-h3tag1 {
